--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-lua/plugins/black.lua
-lua/plugins/vim-isort.lua
-lua/plugins/vimtex.lua
+/lua/plugins/black.lua
+/lua/plugins/vim-isort.lua
+/lua/plugins/vimtex.lua
